--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-* {
+/* * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -14,11 +14,10 @@
 }
 
 
-/* Mobile View */
 
 @media (max-width: 360px) {
     .App-container {
         display: flex;
         flex-direction: column;
     }
-}
+} */
