--- a/src/pages/LeaderBoard.css
+++ b/src/pages/LeaderBoard.css
@@ -6,7 +6,65 @@
     box-sizing: border-box;
 }
 
-.heading {
+.leaderboard-container {
+    width: 100vw;
+    height: calc(100vh + 600px);
+    /* min-height: 100vw; */
+    background: #191919;
+    display: grid;
+    grid-template-columns: 6.25vw 93.75vw;
+}
+
+
+/* Sidebar */
+
+#leaderboard-container .sidebar {
+    flex: 6.25%;
+    height: 116.5vw;
+    background: #121212;
+    box-shadow: 0px 4px 30px 4px rgba(0, 0, 0, 0.03);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#leaderboard-container .homeicon,
+#leaderboard-container .leaderboardicon,
+#leaderboard-container .settingsicon {
+    color: #ffffff;
+    transition: 0.2s;
+}
+
+#leaderboard-container .homeicon:hover,
+#leaderboard-container .leaderboardicon:hover,
+#leaderboard-container .settingsicon:hover {
+    color: #ffb800;
+}
+
+#leaderboard-container .smallicon,
+#leaderboard-container .homeicon,
+#leaderboard-container .leaderboardicon,
+#leaderboard-container .settingsicon {
+    margin-top: 40px;
+    font-size: 3vw;
+}
+
+.leaderboard-container .leaderboard-main {
+    flex: 93.75%;
+}
+
+
+/* Header */
+
+.leaderboard-container .header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2.0833vw;
+    margin-bottom: 2.777vw;
+}
+
+.leaderboard-container .heading {
     font-family: 'Poppins', sans-serif;
     font-size: 4.44vw;
     font-weight: 700;
@@ -20,15 +78,7 @@
     top: 3.88vw;
 }
 
-.header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 2.0833vw;
-    margin-bottom: 2.777vw;
-}
-
-.heading-line {
+.leaderboard-container .heading-line {
     flex: 1;
     padding-left: 2vw;
     position: absolute;
@@ -37,4 +87,63 @@
     left: 43.055vw;
     top: 7.361vw;
     border: 0.1px solid #FFFFFF;
+}
+
+
+/* Main content */
+
+.leaderboard-container .leaderboard-main {
+    display: flex;
+    flex-direction: column;
+}
+
+.leaderboard-container .header {
+    flex: 1;
+}
+
+.leaderboard-container .leaderboard-content {
+    flex: 5;
+}
+
+@media (max-width: 940px) {
+    #leaderboard-container .sidebar {
+        height: calc(100vh + 600px);
+        width: 8.25vw;
+    }
+}
+
+@media (max-width: 578px) {
+    #leaderboard-container {
+        display: none;
+    }
+    #leaderboard-container .sidebar {
+        height: 100vh;
+    }
+    .leaderboard-container {
+        display: flex;
+        flex-direction: column;
+        height: 100vh;
+        width: 100vw;
+    }
+    .leaderboard-container .leaderboard-main {
+        flex: 11;
+    }
+    .leaderboard-container .heading {
+        top: 91px;
+    }
+    .leaderboard-container .heading-line {
+        top: 110px;
+    }
+    .leaderboard-container .leaderboard-header {
+        flex: 1;
+    }
+    .leaderboard-container .leaderboard-content {
+        flex: 8;
+    }
+}
+
+@media (max-width: 360px) {
+    .leaderboard-container .heading-line {
+        top: 102px;
+    }
 }
