--- a/src/pages/components/Sidebar.css
+++ b/src/pages/components/Sidebar.css
@@ -1,7 +1,9 @@
 .sidebar-container {
-    height: 100vw;
-    min-height: 100vh;
-    width: 6.2vw;
-    line-height: 1.25vw;
     background-color: #121212;
+}
+
+@media (max-width: 360px) {
+    .sidebar-container {
+        flex: 1;
+    }
 }
