--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,31 @@
-/* * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-.App-container {
-    width: 100%;
-    height: 100vw;
+.App-header {
+    background-color: #282c34;
     min-height: 100vh;
-    background: #191919;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
+.App-link {
+    color: #61dafb;
+}
 
-
-@media (max-width: 360px) {
-    .App-container {
-        display: flex;
-        flex-direction: column;
+@keyframes App-logo-spin {
+    from {
+        transform: rotate(0deg);
     }
-} */
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+.box .percent .num {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: black;
+}
